--- a/index.html
+++ b/index.html
@@ -116,13 +116,11 @@
 
       const chatBox = document.getElementById("chat-box");
 
-      // 用户消息
       const userMsg = document.createElement("div");
       userMsg.className = "message user-message";
       userMsg.textContent = question;
       chatBox.appendChild(userMsg);
 
-      // 回答框
       const responseMsg = document.createElement("div");
       responseMsg.className = "message";
       chatBox.appendChild(responseMsg);
@@ -131,6 +129,7 @@
       chatBox.scrollTop = chatBox.scrollHeight;
 
       try {
+        console.log("[INFO] 正在发送请求...");
         const res = await fetch("https://web-production-6954e.up.railway.app/ask", {
           method: "POST",
           headers: { "Content-Type": "application/json" },
@@ -138,22 +137,29 @@
         });
 
         const contentType = res.headers.get("content-type") || "";
+        console.log("[INFO] 响应类型:", contentType);
 
         if (contentType.includes("application/json")) {
+          console.log("[INFO] 返回普通 JSON 响应");
           const json = await res.json();
+          console.log("[DEBUG] JSON 内容:", json);
           responseMsg.textContent = json.content || json.data || "（无返回内容）";
           chatBox.scrollTop = chatBox.scrollHeight;
           return;
         }
 
+        console.log("[INFO] 返回 SSE 流式响应，准备读取 reader...");
         const reader = res.body.getReader();
         const decoder = new TextDecoder("utf-8");
         let fullText = "";
 
         while (true) {
           const { done, value } = await reader.read();
+          console.log("[DEBUG] 读取中：", { done, value });
           if (done) break;
           const chunk = decoder.decode(value, { stream: true });
+          console.log("[DEBUG] 解码 chunk：", chunk);
+
           const lines = chunk.split("\n").filter(line => line.startsWith("data: "));
           for (const line of lines) {
             const jsonStr = line.replace(/^data:\s*/, "");
@@ -163,13 +169,14 @@
               fullText += content;
               responseMsg.textContent = fullText.trim();
               chatBox.scrollTop = chatBox.scrollHeight;
+              console.log("[DEBUG] 当前累积内容：", fullText);
             } catch (e) {
-              console.warn("解析失败：", jsonStr);
+              console.warn("[WARN] JSON 解析失败：", jsonStr);
             }
           }
         }
       } catch (err) {
-        console.error(err);
+        console.error("[ERROR] 网络或解析异常：", err);
         responseMsg.textContent = "网络错误，请稍后重试。";
       }
 
