--- a/index.html
+++ b/index.html
@@ -132,84 +132,102 @@
     </div>
   </div>
 
-  <script>
-    async function sendMessage() {
-      const input = document.getElementById("user-input");
-      const question = input.value.trim();
-      if (!question) return;
+<script>
+  async function sendMessage() {
+    const input = document.getElementById("user-input");
+    const question = input.value.trim();
+    if (!question) return;
 
-      const chatBox = document.getElementById("chat-box");
+    const chatBox = document.getElementById("chat-box");
 
-      // 添加用户问题气泡（蓝色）
-      const userMsg = document.createElement("div");
-      userMsg.className = "message user";
-      userMsg.textContent = question;
-      chatBox.appendChild(userMsg);
+    // 用户问题（蓝色）
+    const userMsg = document.createElement("div");
+    userMsg.className = "message user";
+    userMsg.textContent = question;
+    chatBox.appendChild(userMsg);
 
-      input.value = "";
-      chatBox.scrollTop = chatBox.scrollHeight;
+    input.value = "";
+    chatBox.scrollTop = chatBox.scrollHeight;
 
-      // 添加曹先生思考中气泡
-      const responseMsg = document.createElement("div");
-      responseMsg.className = "message";
-      responseMsg.textContent = "曹先生思考中...";
-      chatBox.appendChild(responseMsg);
+    // 回答容器
+    const answerContainer = document.createElement("div");
+    answerContainer.className = "message";
+    chatBox.appendChild(answerContainer);
 
-      try {
-        const res = await fetch("https://web-production-6954e.up.railway.app/ask", {
-          method: "POST",
-          headers: { "Content-Type": "application/json" },
-          body: JSON.stringify({ question })
+    try {
+      const res = await fetch("https://web-production-6954e.up.railway.app/ask", {
+        method: "POST",
+        headers: { "Content-Type": "application/json" },
+        body: JSON.stringify({ question })
+      });
+
+      const data = await res.json();
+      let answer = data.content || "抱歉，未能获取回答。";
+
+      // 提取 quick_question 内容
+      const quickQuestions = [...answer.matchAll(/<quick_question>(.*?)<\/quick_question>/g)].map(m => m[1]);
+      // 移除标签后的回答内容
+      const cleanAnswer = answer.replace(/<quick_question>.*?<\/quick_question>/g, "").trim();
+
+      // 格式化段落：添加段间距缩进
+      const formatted = cleanAnswer
+        .split(/\n+/)
+        .map(p => `<p style="text-indent: 2em; margin: 6px 0;">${p}</p>`)
+        .join("");
+
+      // 设置回答内容
+      answerContainer.innerHTML = formatted;
+
+      // 添加关联问题
+      if (quickQuestions.length > 0) {
+        const rel = document.createElement("div");
+        rel.style.marginTop = "10px";
+        rel.style.display = "flex";
+        rel.style.flexWrap = "wrap";
+        rel.style.gap = "8px";
+
+        quickQuestions.forEach(q => {
+          const qBtn = document.createElement("div");
+          qBtn.textContent = "🔍 " + q;
+          qBtn.className = "message quick";
+          qBtn.style.background = "#eee";
+          qBtn.style.padding = "6px 10px";
+          qBtn.style.borderRadius = "16px";
+          qBtn.style.cursor = "pointer";
+          qBtn.style.fontSize = "14px";
+          qBtn.addEventListener("click", () => {
+            input.value = q;
+            input.focus();
+          });
+          rel.appendChild(qBtn);
         });
 
-        const data = await res.json();
-
-        if (data.content) {
-          responseMsg.textContent = data.content.replace(/<\/?quick_question>/g, "");
-
-          // 如果有相关问题
-          if (Array.isArray(data.related_questions) && data.related_questions.length) {
-            const relatedDiv = document.createElement("div");
-            relatedDiv.className = "related";
-
-            data.related_questions.forEach(q => {
-              const qEl = document.createElement("div");
-              qEl.className = "related-question";
-              qEl.textContent = q;
-              qEl.onclick = () => {
-                document.getElementById("user-input").value = q;
-                document.getElementById("user-input").focus();
-              };
-              relatedDiv.appendChild(qEl);
-            });
-
-            chatBox.appendChild(relatedDiv);
-          }
-
-        } else {
-          responseMsg.textContent = "抱歉，未能获取回答。";
-        }
-      } catch (err) {
-        responseMsg.textContent = "网络错误，请稍后重试。";
+        answerContainer.appendChild(rel);
       }
 
-      chatBox.scrollTop = chatBox.scrollHeight;
+    } catch (err) {
+      answerContainer.textContent = "网络错误，请稍后重试。";
     }
 
-    document.getElementById("user-input").addEventListener("keydown", function (e) {
-      if (e.key === "Enter") {
-        e.preventDefault();
-        sendMessage();
-      }
-    });
+    chatBox.scrollTop = chatBox.scrollHeight;
+  }
 
-    document.querySelectorAll(".message.quick").forEach(el => {
-      el.addEventListener("click", () => {
-        const input = document.getElementById("user-input");
-        input.value = el.textContent.replace(/^🔍\s*/, "");
-        input.focus();
-      });
+  // 仅按 Enter 发送
+  document.getElementById("user-input").addEventListener("keydown", function (e) {
+    if (e.key === "Enter") {
+      e.preventDefault();
+      sendMessage();
+    }
+  });
+
+  // 快捷问题填入输入框
+  document.querySelectorAll(".message.quick").forEach(el => {
+    el.addEventListener("click", () => {
+      const input = document.getElementById("user-input");
+      input.value = el.textContent.replace(/^🔍\s*/, "");
+      input.focus();
     });
-  </script>
+  });
+</script>
 </body>
 </html>
